Fix crash when PhononDisplay is not yet initialized

BUG: 445429